[gd_scene load_steps=6 format=3 uid="uid://cuexp1jksyykc"]

[ext_resource type="Script" path="res://Scenes/Spawnables/serpent.gd" id="1_3os22"]
[ext_resource type="Texture2D" uid="uid://du0iy5muuwtcn" path="res://Resources/cricro_atlas.png" id="2_vlbmw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6q36"]
size = Vector2(11, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppuf4"]
atlas = ExtResource("2_vlbmw")
region = Rect2(0, 0, 16, 48)

[sub_resource type="QuadMesh" id="QuadMesh_ibcfs"]

[node name="Serpent" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_3os22")
speed = 3000.0
attack_time = 2.0

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_o6q36")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_ppuf4")

[node name="WarningSprite" type="MeshInstance2D" parent="."]
modulate = Color(0.889975, 0.575736, 0.517946, 1)
position = Vector2(-0.375, 320.625)
scale = Vector2(12.75, 580.75)
mesh = SubResource("QuadMesh_ibcfs")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
